GpCli: fix double scroll issue

--- a/src/assets/less/pages/globalping/cli.less
+++ b/src/assets/less/pages/globalping/cli.less
@@ -481,7 +481,8 @@
 				}
 
 				&_content {
-					max-width: 100%;
+					overflow: visible; /* to prevent any possible shrinking */
+					width: 1028px; /* since it is not a dymanic content */
 					font-family: "Source Code Pro", monospace;
 					font-weight: 500;
 					font-size: 16px;
